--- a/Groopd/View/Base.lproj/Main.storyboard
+++ b/Groopd/View/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -41,6 +42,7 @@
                     </navigationItem>
                     <connections>
                         <segue destination="9y0-sA-1aP" kind="show" identifier="GoToContactsList" id="Mwl-9C-TSw"/>
+                        <segue destination="rHZ-XV-MEX" kind="show" identifier="GoToMessages" id="4ao-in-AEC"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0rh-PL-VIl" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -76,7 +78,36 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o0e-rX-lqm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1767" y="793"/>
+            <point key="canvasLocation" x="1758" y="448"/>
+        </scene>
+        <!--Messages-->
+        <scene sceneID="XwP-Zq-Djc">
+            <objects>
+                <viewController id="rHZ-XV-MEX" customClass="MessagesViewController" customModule="Groopd" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="HKg-zS-cs3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="sp7-dr-csy"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Messages" id="vzx-5s-CnG"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5DZ-RC-8St" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2593" y="939"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ijW-M4-38b">
+            <objects>
+                <navigationController id="bsO-yk-GXB" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="NOU-Uc-90w">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GLJ-zs-IiE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1783" y="1145"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="XtT-j9-cIJ">
